syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "ObstacleInfo.proto";


message PathfindingEnterSceneReq {
	bool is_editor = 6;
	uint32 scene_tag_hash = 13;
	uint32 polygon_id = 3;
	uint32 version = 12;
	uint32 scene_id = 11;
	repeated int32 activity_id = 10;
	repeated ObstacleInfo obstacles = 1;
}