syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message PathfindingEnterSceneRsp {
	int32 retcode = 8;
}