syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Vector3Int.proto";
import "Vector.proto";
import "QueryFilter.proto";


message QueryPathReq {
	int32 query_id = 3;
	uint32 scene_id = 2;
	OptionType query_type = 5;
	QueryFilter filter = 14;
	Vector3Int destination_extend = 9;
	Vector3Int source_extend = 7;
	Vector source_pos = 15;
	repeated Vector destination_pos = 10;
	enum OptionType {
		OptionType_OPTION_NONE = 0;
		OptionType_OPTION_NORMAL = 1;
		OptionType_OPTION_FIRST_CAN_GO = 2;
	}
}